--- a/XinjingdailyBot/XinjingdailyBot.csproj
+++ b/XinjingdailyBot/XinjingdailyBot.csproj
@@ -21,8 +21,8 @@
 	<ItemGroup>
 		<PackageReference Include="MySql.Data" Version="8.0.29" />
 		<PackageReference Include="NLog" Version="5.0.1" />
-		<PackageReference Include="SqlSugarCore" Version="5.0.8.9" />
-		<PackageReference Include="Telegram.Bot" Version="18.0.0-alpha.3" />
+		<PackageReference Include="SqlSugarCore" Version="5.0.9.1" />
+		<PackageReference Include="Telegram.Bot" Version="18.0.0" />
 		<PackageReference Include="Telegram.Bot.Extensions.Polling" Version="2.0.0-alpha.1" />
 	</ItemGroup>
 
