还没完全写完，存个档先

--- a/XinjingdailyBot/XinjingdailyBot.csproj
+++ b/XinjingdailyBot/XinjingdailyBot.csproj
@@ -22,7 +22,7 @@
 	<ItemGroup>
 		<PackageReference Include="MySql.Data" Version="8.0.29" />
 		<PackageReference Include="NLog" Version="5.0.1" />
-		<PackageReference Include="SqlSugarCore" Version="5.0.9.7"/>
+		<PackageReference Include="SqlSugarCore" Version="5.0.9.7" />
 		<PackageReference Include="Telegram.Bot" Version="18.0.0" />
 		<PackageReference Include="Telegram.Bot.Extensions.Polling" Version="2.0.0-alpha.1" />
 	</ItemGroup>
@@ -49,6 +49,14 @@
 		<None Update="NLog.config">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EditorConfigFiles Remove="C:\Users\chr11\OneDrive\repos\C#\XinjingdailyBot\XinjingdailyBot\.editorconfig" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="C:\Users\chr11\OneDrive\repos\C#\XinjingdailyBot\XinjingdailyBot\.editorconfig" />
 	</ItemGroup>
 
 </Project>
