新增 setusergroup 命令 重构消息处理流程

--- a/XinjingdailyBot/NLog.config
+++ b/XinjingdailyBot/NLog.config
@@ -1,15 +1,34 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
-	<targets>
-		<target xsi:type="ColoredConsole" name="console"
-				useDefaultRowHighlightingRules="True"
-				errorStream="True"
-				enableAnsiOutput="True"
-				layout="${longdate} ${uppercase:${level}} ${message}" />
-	</targets>
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    autoReload="true"
+    throwExceptions="true">
 
-	<rules>
-		<logger name="*" minlevel="Debug" writeTo="console" />
-	</rules>
+    <targets encoding="UTF-8">
+
+        <!--控制台日志-->
+        <target xsi:type="ColoredConsole"
+            name="console"
+            errorStream="True"
+            enableAnsiOutput="True"
+            layout="${date:format=HH\:mm\:ss} ${level:padding=-5}: ${message}" />
+
+        <!--文件日志-->
+        <target name="asyncFile" xsi:type="AsyncWrapper">
+            <target xsi:type="File"
+                name="logfile"
+                fileName="logs/log.txt"
+                maxArchiveFiles="10"
+                archiveEvery="Day"
+                archiveAboveSize="104857600"
+                archiveOldFileOnStartup="true"
+                layout="${longdate} ${callsite} ${level:padding=-5}: ${message}" />
+        </target>
+
+    </targets>
+
+    <rules>
+        <logger name="*" minlevel="Info" writeTo="logfile" />
+        <logger name="*" minlevel="Debug" writeTo="console" />
+    </rules>
 </nlog>
