--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,25 @@ env:
 
 jobs:
   build:
-    runs-on: windows-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os : [macos-latest, windows-latest, ubuntu-latest]
+        include:
+          - os: macos-latest
+            arch: osx-x64
+          - os: windows-latest
+            arch: win-x64
+          - os: windows-latest
+            arch: win-arm
+          - os: windows-latest
+            arch: win-arm64
+          - os: ubuntu-latest
+            arch: x64
+          - os: ubuntu-latest
+            arch: arm
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout code
@@ -28,74 +46,18 @@ jobs:
       - name: Restore packages in preparation for ${{ env.PROJECT_NAME }} publishing
         run: dotnet restore ${{ env.PROJECT_NAME }} -p:ContinuousIntegrationBuild=true --nologo
 
-      - name: Publish Windows x64
-        run: dotnet publish ${{ env.PROJECT_NAME }} --runtime win-x64 -p:PublishSingleFile=true --self-contained true -o ./tmp/${{ env.PROJECT_NAME }}-win-x64 -c Release
+      - name: Publish ${{ matrix.os }} ${{ matrix.arch }}
+        run: dotnet publish ${{ env.PROJECT_NAME }} --runtime ${{ matrix.arch }} -p:PublishSingleFile=true --self-contained true -o ./tmp/${{ env.PROJECT_NAME }} -c Release
 
-      - name: Publish Windows arm
-        run: dotnet publish ${{ env.PROJECT_NAME }} --runtime win-arm -p:PublishSingleFile=true --self-contained true -o ./tmp/${{ env.PROJECT_NAME }}-win-arm -c Release
-
-      - name: Publish Windows arm64
-        run: dotnet publish ${{ env.PROJECT_NAME }} --runtime win-arm64 -p:PublishSingleFile=true --self-contained true -o ./tmp/${{ env.PROJECT_NAME }}-win-arm64 -c Release
-      
-      - name: Publish OSX x64
-        run: dotnet publish ${{ env.PROJECT_NAME }} --runtime osx-x64 -p:PublishSingleFile=true --self-contained true -o ./tmp/${{ env.PROJECT_NAME }}-osx-x64 -c Release
-      
-      - name: Publish Linux x64
-        run: dotnet publish ${{ env.PROJECT_NAME }} --runtime linux-x64 -p:PublishSingleFile=true --self-contained true -o ./tmp/${{ env.PROJECT_NAME }}-linux-x64 -c Release
-      
-      - name: Publish Linux arm
-        run: dotnet publish ${{ env.PROJECT_NAME }} --runtime linux-arm -p:PublishSingleFile=true --self-contained true -o ./tmp/${{ env.PROJECT_NAME }}-linux-arm -c Release
-      
       - name: zip files
-        run: |
-          7z a -bd -slp -tzip -mm=Deflate64 -mx=9 -mfb=258 -mpass=15 "./dist/win-x64.zip" "./tmp/${{ env.PROJECT_NAME }}-win-x64"
-          7z a -bd -slp -tzip -mm=Deflate64 -mx=9 -mfb=258 -mpass=15 "./dist/win-arm.zip" "./tmp/${{ env.PROJECT_NAME }}-win-arm"
-          7z a -bd -slp -tzip -mm=Deflate64 -mx=9 -mfb=258 -mpass=15 "./dist/win-arm64.zip" "./tmp/${{ env.PROJECT_NAME }}-win-arm64"
-          7z a -bd -slp -tzip -mm=Deflate64 -mx=9 -mfb=258 -mpass=15 "./dist/osx-x64.zip" "./tmp/${{ env.PROJECT_NAME }}-osx-x64"
-          7z a -bd -slp -tzip -mm=Deflate64 -mx=9 -mfb=258 -mpass=15 "./dist/linux-x64.zip" "./tmp/${{ env.PROJECT_NAME }}-linux-x64"
-          7z a -bd -slp -tzip -mm=Deflate64 -mx=9 -mfb=258 -mpass=15 "./dist/linux-arm.zip" "./tmp/${{ env.PROJECT_NAME }}-linux-arm"
+        run:  7z a -bd -slp -tzip -mm=Deflate -mx=5 -mfb=150 -mpass=10 "./dist/${{ matrix.arch }}.zip" "./tmp/${{ env.PROJECT_NAME }}"
 
-      - name: Upload ${{ env.PROJECT_NAME }}-win-x64
+      - name: Upload ${{ env.PROJECT_NAME }}-${{ matrix.arch }}
         continue-on-error: true
         uses: actions/upload-artifact@v3.0.0
         with:
-          name: win-x64
-          path: ./dist/win-x64.zip
-
-      - name: Upload ${{ env.PROJECT_NAME }}-win-arm
-        continue-on-error: true
-        uses: actions/upload-artifact@v3.0.0
-        with:
-          name: win-arm
-          path: ./dist/win-arm.zip
-
-      - name: Upload ${{ env.PROJECT_NAME }}-win-arm64
-        continue-on-error: true
-        uses: actions/upload-artifact@v3.0.0
-        with:
-          name: win-arm64
-          path: ./dist/win-arm64.zip
-
-      - name: Upload ${{ env.PROJECT_NAME }}-osx-x64
-        continue-on-error: true
-        uses: actions/upload-artifact@v3.0.0
-        with:
-          name: osx-x64
-          path: ./dist/osx-x64.zip
-
-      - name: Upload ${{ env.PROJECT_NAME }}-linux-x64
-        continue-on-error: true
-        uses: actions/upload-artifact@v3.0.0
-        with:
-          name: linux-x64
-          path: ./dist/linux-x64.zip
-
-      - name: Upload ${{ env.PROJECT_NAME }}-linux-arm
-        continue-on-error: true
-        uses: actions/upload-artifact@v3.0.0
-        with:
-          name: linux-arm
-          path: ./dist/linux-arm.zip
+          name: ${{ matrix.arch }}
+          path: ./dist/${{ matrix.arch }}.zip
 
   release:
     needs: build
@@ -110,31 +72,31 @@ jobs:
         with:
           name: win-x64
           path: out
-          
+
       - name: Download win-arm artifact
         uses: actions/download-artifact@v3.0.0
         with:
           name: win-arm
           path: out
-          
+
       - name: Download win-arm64 artifact
         uses: actions/download-artifact@v3.0.0
         with:
           name: win-arm64
           path: out
-          
+
       - name: Download osx-x64 artifact
         uses: actions/download-artifact@v3.0.0
         with:
           name: osx-x64
           path: out
-          
+
       - name: Download linux-x64 artifact
         uses: actions/download-artifact@v3.0.0
         with:
           name: linux-x64
           path: out
-          
+
       - name: Download linux-arm artifact
         uses: actions/download-artifact@v3.0.0
         with:
