--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os : [macos-latest, windows-latest, ubuntu-latest]
         include:
           - os: macos-latest
             arch: osx-x64
@@ -23,9 +22,9 @@ jobs:
           - os: windows-latest
             arch: win-arm64
           - os: ubuntu-latest
-            arch: x64
+            arch: linux-x64
           - os: ubuntu-latest
-            arch: arm
+            arch: linux-arm
 
     runs-on: ${{ matrix.os }}
 
@@ -50,7 +49,7 @@ jobs:
         run: dotnet publish ${{ env.PROJECT_NAME }} --runtime ${{ matrix.arch }} -p:PublishSingleFile=true --self-contained true -o ./tmp/${{ env.PROJECT_NAME }} -c Release
 
       - name: zip files
-        run:  7z a -bd -slp -tzip -mm=Deflate -mx=5 -mfb=150 -mpass=10 "./dist/${{ matrix.arch }}.zip" "./tmp/${{ env.PROJECT_NAME }}"
+        run: 7z a -bd -slp -tzip -mm=Deflate -mx=5 -mfb=150 -mpass=10 "./dist/${{ matrix.arch }}.zip" "./tmp/${{ env.PROJECT_NAME }}"
 
       - name: Upload ${{ env.PROJECT_NAME }}-${{ matrix.arch }}
         continue-on-error: true
