feat 添加新配置项 ThrowPendingUpdates

--- a/XinjingdailyBot/config.json
+++ b/XinjingdailyBot/config.json
@@ -2,6 +2,7 @@
   "Debug": false,
   "BotToken": "",
   "Welcome": "欢迎使用 心惊报 @xinjingdaily 专用投稿机器人",
+  "ThrowPendingUpdates": false,
   "Proxy": null,
   "DBHost": "127.0.0.1",
   "DBPort": 3306,
