--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -16,6 +16,13 @@
     "ThrowPendingUpdates": false,
     "SuperAdmins": []
   },
+  "Channel": {
+    "ReviewGroup": "",
+    "CommentGroup": "",
+    "SubGroup": "",
+    "AcceptChannel": "",
+    "RejectChannel": ""
+  },
   // 消息设置
   "Message": {
     "Start": "欢迎使用 心惊报 @xinjingdaily 专用投稿机器人",
