--- a/XinjingdailyBot.Infrastructure/XinjingdailyBot.Infrastructure.csproj
+++ b/XinjingdailyBot.Infrastructure/XinjingdailyBot.Infrastructure.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="NLog" Version="5.1.0" />
     <PackageReference Include="SqlSugar.IOC" Version="1.9.0" />
     <PackageReference Include="SqlSugarCore" Version="5.1.3.41" />
+    <PackageReference Include="Telegram.Bot" Version="18.0.0" />
   </ItemGroup>
 
 </Project>
