--- a/XinjingdailyBot.Repository/XinjingdailyBot.Repository.csproj
+++ b/XinjingdailyBot.Repository/XinjingdailyBot.Repository.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="MySql.Data" Version="8.0.31" />
     <PackageReference Include="NLog" Version="5.1.0" />
