--- a/XinjingdailyBot.Infrastructure/XinjingdailyBot.Infrastructure.csproj
+++ b/XinjingdailyBot.Infrastructure/XinjingdailyBot.Infrastructure.csproj
@@ -15,4 +15,28 @@
     <PackageReference Include="Telegram.Bot" Version="18.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Localization\Emojis.Designer.cs">
+      <DependentUpon>Emojis.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+    <Compile Update="Localization\Langs.Designer.cs">
+      <DependentUpon>Langs.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Localization\Emojis.resx">
+      <LastGenOutput>Emojis.Designer.cs</LastGenOutput>
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Localization\Langs.resx">
+      <LastGenOutput>Langs.Designer.cs</LastGenOutput>
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
