--- a/XinjingdailyBot.Service/XinjingdailyBot.Service.csproj
+++ b/XinjingdailyBot.Service/XinjingdailyBot.Service.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\XinjingdailyBot.Repository\XinjingdailyBot.Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Bot\Handler\" />
+  </ItemGroup>
+
 </Project>
