--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -14,6 +14,7 @@
     "BotToken": "",
     "Proxy": null,
     "ThrowPendingUpdates": false,
+    "AutoLeaveOtherGroup": false,
     "SuperAdmins": []
   },
   "Channel": {
