--- a/XinjingdailyBot.Interface/XinjingdailyBot.Interface.csproj
+++ b/XinjingdailyBot.Interface/XinjingdailyBot.Interface.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\XinjingdailyBot.Repository\XinjingdailyBot.Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Bot\Handler\" />
+  </ItemGroup>
+
 </Project>
