--- a/XinjingdailyBot.Command/XinjingdailyBot.Command.csproj
+++ b/XinjingdailyBot.Command/XinjingdailyBot.Command.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+    <PackageReference Include="NLog" Version="5.1.0" />
+    <PackageReference Include="SqlSugarCore" Version="5.1.3.41" />
+    <PackageReference Include="Telegram.Bot" Version="18.0.0" />
+  </ItemGroup>
+
 </Project>
