--- a/XinjingdailyBot.WebAPI/nlog.config
+++ b/XinjingdailyBot.WebAPI/nlog.config
@@ -15,16 +15,16 @@
 		<!-- 网络请求日志 -->
 		<target name="consoleNet" xsi:type="ColoredConsole"
 			enableAnsiOutput="True"
-			layout="${pad:padding=5:inner=${level}} ${longdate} [${logger}] | ${aspnet-request-iP} | ${aspnet-request-url}${newline}      ${message}" />
+			layout="${pad:padding=5:inner=${level}} ${date} [${logger:shortName=true}] | ${aspnet-request-iP} | ${aspnet-request-url}${newline}  ${message}" />
 		<!-- SQL日志 -->
 		<target name="consoleSql" xsi:type="ColoredConsole"
 			enableAnsiOutput="True"
-			layout="${pad:padding=5:inner=${level}} ${longdate} SQL${newline}${message}" />
+			layout="${pad:padding=5:inner=${level}} ${date} SQL${newline}${message}" />
 		<!-- 普通日志 -->
 		<target name="console" xsi:type="ColoredConsole"
 			errorStream="True"
 			enableAnsiOutput="True"
-			layout="${pad:padding=5:inner=${level}} ${longdate} [${logger}]${newline}      ${message}" />
+			layout="${pad:padding=5:inner=${level}} ${date} [${logger:shortName=true}] ${message}" />
 
 		<!-- 文件日志 -->
 		<!-- 网络请求日志 -->
@@ -81,8 +81,8 @@
 		<logger name="Microsoft.*,Quartz.Core.QuartzSchedulerThread" writeTo="blackhole" maxlevel="Info" final="true" />
 
 		<!-- SQL日志 -->
-		<logger name="TrxTradeBot.WebAPI.Extensions.DbExtension" writeTo="consoleSql" final="true" />
-		<logger name="TrxTradeBot.WebAPI.Extensions.DbExtension" writeTo="filelogSql" final="true" />
+		<logger name="XinjingdailyBot.WebAPI.Extensions.DatabaseExtension" writeTo="consoleSql" final="true" />
+		<logger name="XinjingdailyBot.WebAPI.Extensions.DatabaseExtension" writeTo="filelogSql" final="true" />
 
 		<!-- 控制台日志 -->
 		<logger name="*" minLevel="Debug" writeTo="console" />
