--- a/XinjingdailyBot.Command/XinjingdailyBot.Command.csproj
+++ b/XinjingdailyBot.Command/XinjingdailyBot.Command.csproj
@@ -15,8 +15,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\XinjingdailyBot.Infrastructure\XinjingdailyBot.Infrastructure.csproj" />
+    <ProjectReference Include="..\XinjingdailyBot.Interface\XinjingdailyBot.Interface.csproj" />
     <ProjectReference Include="..\XinjingdailyBot.Model\XinjingdailyBot.Model.csproj" />
     <ProjectReference Include="..\XinjingdailyBot.Repository\XinjingdailyBot.Repository.csproj" />
+    <ProjectReference Include="..\XinjingdailyBot.Service\XinjingdailyBot.Service.csproj" />
   </ItemGroup>
 
   <ItemGroup>
