--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -35,8 +35,8 @@
     "UseMySQL": true,
     "DbHost": "localhost",
     "DbPort": 3306,
-    "DbName": "trade_bot",
+    "DbName": "xjb_db",
     "DbUser": "root",
-    "DbPassword": "xbxb114514$$##"
+    "DbPassword": "123456"
   }
 }
