--- a/XinjingdailyBot.WebAPI/nlog.config
+++ b/XinjingdailyBot.WebAPI/nlog.config
@@ -81,7 +81,7 @@
 		<logger name="Microsoft.*,Quartz.Core.QuartzSchedulerThread" writeTo="blackhole" maxlevel="Info" final="true" />
 
 		<!-- SQL日志 -->
-		<logger name="XinjingdailyBot.WebAPI.Extensions.DatabaseExtension" writeTo="blackhole" final="true" />
+		<logger name="XinjingdailyBot.WebAPI.Extensions.DatabaseExtension" writeTo="consoleSql" final="true" />
 		<logger name="XinjingdailyBot.WebAPI.Extensions.DatabaseExtension" writeTo="filelogSql" final="true" />
 
 		<!-- 控制台日志 -->
