--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -33,6 +33,7 @@
   "Database": {
     "Generate": true,
     "UseMySQL": true,
+    "LogSQL": false,
     "DbHost": "localhost",
     "DbPort": 3306,
     "DbName": "xjb_db",
