--- a/XinjingdailyBot.Model/XinjingdailyBot.Model.csproj
+++ b/XinjingdailyBot.Model/XinjingdailyBot.Model.csproj
@@ -11,9 +11,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
-    <PackageReference Include="MySql.Data" Version="8.0.31" />
     <PackageReference Include="NLog" Version="5.1.1" />
     <PackageReference Include="SqlSugar.IOC" Version="1.9.0" />
+    <PackageReference Include="SqlSugar.MySqlConnectorCore" Version="5.10.3.36" />
     <PackageReference Include="SqlSugarCore" Version="5.1.3.42" />
   </ItemGroup>
 
