--- a/XinjingdailyBot.Infrastructure/XinjingdailyBot.Infrastructure.csproj
+++ b/XinjingdailyBot.Infrastructure/XinjingdailyBot.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -10,7 +10,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="NLog" Version="5.1.1" />
-    <PackageReference Include="SqlSugarCore" Version="5.1.3.42" />
     <PackageReference Include="Telegram.Bot" Version="18.0.0" />
   </ItemGroup>
 
