--- a/XinjingdailyBot.Interface/XinjingdailyBot.Interface.csproj
+++ b/XinjingdailyBot.Interface/XinjingdailyBot.Interface.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -6,13 +6,6 @@
     <Nullable>enable</Nullable>
     <TieredPGO>true</TieredPGO>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
-    <PackageReference Include="NLog" Version="5.1.1" />
-    <PackageReference Include="SqlSugarCore" Version="5.1.3.42" />
-    <PackageReference Include="Telegram.Bot" Version="18.0.0" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\XinjingdailyBot.Infrastructure\XinjingdailyBot.Infrastructure.csproj" />
