--- a/XinjingdailyBot.Model/XinjingdailyBot.Model.csproj
+++ b/XinjingdailyBot.Model/XinjingdailyBot.Model.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,10 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
-    <PackageReference Include="NLog" Version="5.1.1" />
-    <PackageReference Include="SqlSugar.IOC" Version="1.9.0" />
-    <PackageReference Include="SqlSugar.MySqlConnectorCore" Version="5.10.3.36" />
     <PackageReference Include="SqlSugarCore" Version="5.1.3.42" />
   </ItemGroup>
 
