--- a/XinjingdailyBot.WebAPI/XinjingdailyBot.WebAPI.csproj
+++ b/XinjingdailyBot.WebAPI/XinjingdailyBot.WebAPI.csproj
@@ -14,10 +14,10 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+    <PackageReference Include="MySql.Data" Version="8.0.31" />
     <PackageReference Include="NLog" Version="5.1.1" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.2.1" />
     <PackageReference Include="SqlSugar.IOC" Version="1.9.0" />
-    <PackageReference Include="SqlSugar.MySqlConnectorCore" Version="5.10.3.36" />
     <PackageReference Include="SqlSugarCore" Version="5.1.3.42" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="Telegram.Bot" Version="18.0.0" />
@@ -25,8 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\XinjingdailyBot.Command\XinjingdailyBot.Command.csproj" />
-    <ProjectReference
-      Include="..\XinjingdailyBot.Infrastructure\XinjingdailyBot.Infrastructure.csproj" />
+    <ProjectReference Include="..\XinjingdailyBot.Infrastructure\XinjingdailyBot.Infrastructure.csproj" />
     <ProjectReference Include="..\XinjingdailyBot.Interface\XinjingdailyBot.Interface.csproj" />
     <ProjectReference Include="..\XinjingdailyBot.Model\XinjingdailyBot.Model.csproj" />
     <ProjectReference Include="..\XinjingdailyBot.Service\XinjingdailyBot.Service.csproj" />
