--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -6,6 +6,13 @@
     }
   },
   "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:8123"
+      }
+    }
+  },
 
   // 调试模式
   "Debug": false,
