--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,6 +36,11 @@ jobs:
       - name: Publish ${{ env.PROJECT_NAME }} ${{ matrix.arch }}
         run: dotnet publish ${{ env.PROJECT_NAME }} --runtime ${{ matrix.arch }} -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true --self-contained true -c Release -o ./tmp/${{ env.PROJECT_NAME }}
 
+      - name: Remove useless files
+        run: |
+          Remove-Item *.pdb
+          Remove-Item appsettings.Development.json
+
       - name: Zip files
         run: 7z a -bd -slp -tzip -mm=Deflate -mx=5 -mfb=150 -mpass=10 "./dist/${{ matrix.arch }}.zip" "./tmp/${{ env.PROJECT_NAME }}/*"
 
