--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -46,5 +46,14 @@
     "DbName": "xjb_db",
     "DbUser": "root",
     "DbPassword": "123456"
+  },
+  // 投稿设置
+  "Post": {
+    "EnablePostLimit": true,
+    "DailyPaddingLimit": 5,
+    "DailyReviewLimit": 5,
+    "DailyPostLimit": 5,
+    "RatioDivisor": 100,
+    "MaxRatio": 10
   }
 }
