--- a/XinjingdailyBot.WebAPI/nlog.config
+++ b/XinjingdailyBot.WebAPI/nlog.config
@@ -15,16 +15,16 @@
 		<!-- 网络请求日志 -->
 		<target name="consoleNet" xsi:type="ColoredConsole"
 			enableAnsiOutput="True"
-			layout="${pad:padding=5:inner=${level}} ${date} [${logger:shortName=true}] | ${aspnet-request-iP} | ${aspnet-request-url}${newline}  ${message}" />
+			layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] | ${aspnet-request-iP} | ${aspnet-request-url}${newline}  ${message}" />
 		<!-- SQL日志 -->
 		<target name="consoleSql" xsi:type="ColoredConsole"
 			enableAnsiOutput="True"
-			layout="${pad:padding=5:inner=${level}} ${date} SQL${newline}${message}" />
+			layout="${level:format=FirstCharacter} ${date} SQL${newline}${message}" />
 		<!-- 普通日志 -->
 		<target name="console" xsi:type="ColoredConsole"
 			errorStream="True"
 			enableAnsiOutput="True"
-			layout="${pad:padding=5:inner=${level}} ${date} [${logger:shortName=true}] ${message}" />
+			layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] ${message}" />
 
 		<!-- 文件日志 -->
 		<!-- 网络请求日志 -->
