--- a/XinjingdailyBot.Tasks/XinjingdailyBot.Tasks.csproj
+++ b/XinjingdailyBot.Tasks/XinjingdailyBot.Tasks.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PublishTrimmed>true</PublishTrimmed>
+    <TieredPGO>true</TieredPGO>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
