--- a/XinjingdailyBot.Model/XinjingdailyBot.Model.csproj
+++ b/XinjingdailyBot.Model/XinjingdailyBot.Model.csproj
@@ -2,21 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <TieredPGO>true</TieredPGO>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)'=='Debug'">
-    <DebugType>portable</DebugType>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)'=='Release'">
-    <DebugType>none</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SqlSugarCore" Version="5.1.3.42" />
+    <PackageReference Include="SqlSugarCore" />
   </ItemGroup>
 
   <ItemGroup>
